feat(): fixed dimension assignement and coop user infinite calls
